Redefined method itIndustru